# analytics_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes_cashflow.py  routes_forecast.py  routes_health.py  routes_pipeline.py  routes_summary.py
app/core/: config.py  logger.py
app/data/: __init__.py  loader.py  preprocessing.py  schema.py  synthetic_data.py  validator.py
app/features/: feature_engineering.py
app/models/: arima_forecast.py  benchmark_models.py  model_registry.py  summary_analytics.py
app/schemas/: response_models.py
app/services/: forecast_service.py  pipeline_service.py  treasury_service.py
app/utils/: metrics.py
dags/: treasury_pipeline_dag.py
dashboard/: streamlit_app.py
sql/: curated.sql  staging.sql
tests/: conftest.py  test_arima_forecast.py  test_data_pipeline.py  test_feature_engineering.py  test_forecast_backtest.py  test_model_registry.py  test_summary_analytics.py
