[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "treasury-analytics-platform"
version = "1.0.0"
description = "Treasury cashflow analytics — Airflow orchestration, MLflow tracking, Pandera contracts, ARIMA forecasting"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/data/synthetic_data.py", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
